# funk

./: .gitignore  CMakeLists.txt  README.md  test.funk  test.py
demos/: bf.funk  fib.funk
src/: funk.c  funk.h  funk_std.c  funk_std.h  main.c
tests/: array.funk  binary_operations.funk  for.funk  if.funk  io.funk  map.funk  module.funk  string.funk  while.funk
